# Estudos

./: .gitignore
C/: .gitignore  CMakeLists.txt
C/Exercicios/Docs/: .~lock.Exercicios_Ponteiros_C.docx#  BubbleSort_Explicacao_C.docx  Exercicios_BubbleSort_C.docx  Exercicios_Ponteiros_C_Parte2.docx  Exercicios_QuickSort_C.docx  QuickSort_Explicacao_C.docx
C/Exercicios/Ponteiros/Exe01/: Exercicio1.c
C/Exercicios/Ponteiros/Exe03/: exe_03.c
C/Exercicios/Ponteiros/Navegacao/: ExercicioLatLon.c
C/Exercicios/Ponteiros/Piratas/: ExercicioPonteiros.c
C/GUI/1_janela/: janela.c
C/GUI/2_layouts/: layouts.c
C/GUI/buttons/: buttons.c
C/GUI/inputs/: inputs.c
C/HeadsFirst/: CMakeLists.txt  ExercicioOrdenacao.txt
C/HeadsFirst/Arrays/: arrays.c
C/HeadsFirst/Exercicios/Docs/: Exercicios_Ponteiros_C.docx
C/HeadsFirst/Exercicios/Ponteiros/Exe01/: Exe01.c
C/HeadsFirst/Exercicios/Ponteiros/Exe02/: Exe02.c
C/HeadsFirst/Exercicios/Ponteiros/piratas/: piratas.c
C/HeadsFirst/Exercicios/Strings/jukebox/: jukebox.c
C/HeadsFirst/Strings/arrays/: arrays.c
C/HeadsFirst/Strings/string_h/: string_h.c
C/HeadsFirst/Strings/strlen/: strlen.c
C/HeadsFirst/Testes/: calculadora_porcentagem.c
C/Materiais/: Alocacao_Dinamica_Ponteiros.docx
C/cards/: cards.c
C/cardsv2/: cardsv2.c
C/fgets/: fgets.c
C/funcoes/: functions.c
C/loops/: loops.c
C/ponteiros/: ponteiros.c
C/scanf/: scanf.c
C/string/: identificadores.c  strings.c
